Rooms added
