# server/api/DTOs/MessageRequest.cs
@@ -4,5 +4,6 @@ public class MessageRequest
 {
     public string Content { get; set; } = string.Empty;
     public string Username { get; set; } = string.Empty;
+    public string Room { get; set; } = string.Empty;
 
 }
