# server/api/DTOs/TypingRequest.cs
@@ -3,4 +3,5 @@
 public class TypingRequest
 {
     public string Username { get; set; }
+    public string Room { get; set; }
 }
