# server/api/openapi.json
@@ -12,6 +12,16 @@
           "Chat"
         ],
         "operationId": "Chat_Connect",
+        "parameters": [
+          {
+            "name": "room",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -97,6 +107,9 @@
           },
           "username": {
             "type": "string"
+          },
+          "room": {
+            "type": "string"
           }
         }
       },
@@ -105,6 +118,9 @@
         "additionalProperties": false,
         "properties": {
           "username": {
+            "type": "string"
+          },
+          "room": {
             "type": "string"
           }
         }
